// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-dlnjwi gzfqOI"
>
  <div
    className="sc-eCApnc ifXgQD"
  >
    <span
      className="sc-jSFjdj"
    >
      0
    </span>
    <span
      className="sc-gKAaRy fQpzlf"
    >
      42
    </span>
  </div>
  <button
    className="sc-bdnxRM sc-gtsrHT kJsOCr fpNkYw"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-dlnjwi gzfqOI"
>
  <div
    className="sc-hKFxyN eBiOAl"
  >
    🛌🛌
  </div>
  <button
    className="sc-bdnxRM sc-gtsrHT cqAbxk fpNkYw"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-dlnjwi gzfqOI"
>
  <div
    className="sc-hKFxyN eBiOAl"
  >
    🍅
  </div>
  <button
    className="sc-bdnxRM sc-gtsrHT cqAbxk fpNkYw"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-dlnjwi gzfqOI"
>
  <div
    className="sc-hKFxyN eBiOAl"
  >
    🛌
  </div>
  <button
    className="sc-bdnxRM sc-gtsrHT cqAbxk fpNkYw"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
